# static-http

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml  release.yml
.tmp_pytest/: test_default_cli_valuescurrent  test_get_and_head_and_range_recurrent  test_head_returns_headers_withcurrent  test_headers_and_directory_liscurrent  test_invalid_directory_rejectecurrent  test_path_traversal_cannot_esccurrent
src/http_here/: __init__.py  cli.py  keyboard.py  qrcode.py  ranges.py  server.py  urls.py
src/http_here.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_qrcode.py  test_ranges.py  test_server.py  test_urls.py
