[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "http-here"
version = "0.1.0"
description = "A temporary dependency-free static HTTP server with byte-range support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "http-here contributors" }]
dependencies = []
keywords = ["http", "server", "http-here", "static", "range", "cli"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.scripts]
http-here = "http_here.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "build>=1",
  "twine>=5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
